// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceDetailPage should render properly if logged in as owner 1`] = `
<gi
  header={
    <Connect(AppBar)
      activeMenuId="datasource"
    />
  }
>
  <i
    header={
      <Unknown
        primary={
          <Unknown>
            Datasource details 
          </Unknown>
        }
      />
    }
  >
    <t
      disabled={false}
      isRequired={true}
      label="Datasource name"
      labelPlacement="top"
      onChange={[Function]}
      size="s"
      value="Engagement survey 2020"
    />
    <O />
    <OwnerFieldsTable
      fields={
        Array [
          Object {
            "grants": Array [],
            "id": "123",
            "name": "STAFF_NAME",
          },
        ]
      }
      onAddField={[Function]}
      onEditGrant={[Function]}
      onRemoveField={[Function]}
      onUpdateField={[Function]}
    />
  </i>
  <DataSourceDetailActions
    isCreating={false}
    isOwner={true}
    onClickCancel={[Function]}
    onClickDelete={[Function]}
    onClickSave={[Function]}
  />
  <g
    header={
      <h3>
        Permission
      </h3>
    }
    isShow={false}
    onClose={[Function]}
    placement="right"
  >
    <b
      className="pwapp-field-grants-table"
    />
  </g>
</gi>
`;

exports[`DataSourceDetailPage should render properly if not datasource owner 1`] = `
<gi
  header={
    <Connect(AppBar)
      activeMenuId="datasource"
    />
  }
>
  <i
    header={
      <Unknown
        primary={
          <Unknown>
            Datasource details 
            <N
              color="secondary"
            >
              Collaborative
            </N>
          </Unknown>
        }
      />
    }
  >
    <t
      disabled={true}
      isRequired={true}
      label="Datasource name"
      labelPlacement="top"
      onChange={[Function]}
      size="s"
      value="Engagement survey 2020"
    />
    <O />
    <CollaboratorFieldsTable
      fields={
        Array [
          Object {
            "grants": Array [],
            "id": "123",
            "name": "STAFF_NAME",
          },
        ]
      }
    />
  </i>
  <DataSourceDetailActions
    isCreating={false}
    isOwner={false}
    onClickCancel={[Function]}
    onClickDelete={[Function]}
    onClickSave={[Function]}
  />
  <g
    header={
      <h3>
        Permission
      </h3>
    }
    isShow={false}
    onClose={[Function]}
    placement="right"
  >
    <b
      className="pwapp-field-grants-table"
    />
  </g>
</gi>
`;

exports[`DataSourceDetailPage should render properly when grantField is given 1`] = `
<gi
  header={
    <Connect(AppBar)
      activeMenuId="datasource"
    />
  }
>
  <i
    header={
      <Unknown
        primary={
          <Unknown>
            Datasource details 
          </Unknown>
        }
      />
    }
  >
    <t
      disabled={false}
      isRequired={true}
      label="Datasource name"
      labelPlacement="top"
      onChange={[Function]}
      size="s"
      value="Engagement survey 2020"
    />
    <O />
    <OwnerFieldsTable
      fields={
        Array [
          Object {
            "grants": Array [],
            "id": "123",
            "name": "STAFF_NAME",
          },
        ]
      }
      onAddField={[Function]}
      onEditGrant={[Function]}
      onRemoveField={[Function]}
      onUpdateField={[Function]}
    />
  </i>
  <DataSourceDetailActions
    isCreating={false}
    isOwner={true}
    onClickCancel={[Function]}
    onClickDelete={[Function]}
    onClickSave={[Function]}
  />
  <g
    header={
      <h3>
        Permission
      </h3>
    }
    isShow={true}
    onClose={[Function]}
    placement="right"
  >
    <b
      className="pwapp-field-grants-table"
    >
      <FieldGrantsTable
        field={
          Object {
            "grants": Array [],
            "id": "123",
            "name": "STAFF_NAME",
          }
        }
        onAddGrant={[Function]}
        onRemoveGrant={[Function]}
        onUpdateGrant={[Function]}
      />
    </b>
  </g>
</gi>
`;
